--- a/src/index.ejs
+++ b/src/index.ejs
@@ -4,5 +4,7 @@
         <meta charset="utf-8" />
         <title>xx</title>
     </head>
-    <body></body>
+    <body>
+        <app-root></app-root>
+    </body>
 </html>
