--- a/src/index.ejs
+++ b/src/index.ejs
@@ -5,7 +5,7 @@
         <meta name="viewport" content="initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
         <title>ts && react 测试</title>
     </head>
-    <body>
+    <body class="sidebar-mini">
         <div id="root"></div>
     </body>
 </html>
