--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -341,6 +341,7 @@
   }
 
   html,body, #root {
+    font-family: "微软雅黑", Montserrat, "Helvetica Neue", Arial, sans-serif!important;
     background-color: #EEEEEE;
     height: 100%;
     width:100%;
