--- a/src/container/App/style.scss
+++ b/src/container/App/style.scss
@@ -14,6 +14,7 @@
             float: right;
             display: flex;
             flex-direction: column;
+            height: 100%;
 
             &-tb {
                 flex: 1;
@@ -23,17 +24,27 @@
                 position: static;
                 background: transparent;
                 z-index: 2;
+                background: #2c2c2c;
+                background: linear-gradient(160deg,#2c2c2c,#1f1f1f);
+
+                button {
+                    color: #fff;
+                }
             }
 
             > main {
                 flex: 1;
                 overflow-y: scroll;
-                padding: 30px 15px 30px 0;
+                padding: 30px 15px;
             }
 
             > footer {
                 
             }
         }
+    }
+
+    .white {
+        color:#fff;
     }
 }
